B&L QA/objects/Physician_Info__c.object
<CustomObject>
    <description>Used by APAC region to capture additional Physician info like product rates.</description>
    <fields>
        <fullName>Acrys_of_ReStor_rate__c</fullName>
        <label>Acrys of ReStor rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrys_of_Toric_rate__c</fullName>
        <label>Acrys of Toric rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_3_piece_rate__c</fullName>
        <description>Acrysof 3 piece rate</description>
        <label>Acrysof 3 piece rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_IQ_rate__c</fullName>
        <description>Acrysof IQ rate</description>
        <label>Acrysof IQ rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_Single_piece_rate__c</fullName>
        <description>Acrysof Single piece rate</description>
        <label>Acrysof Single piece rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Canon_Staar_Rate__c</fullName>
        <label>Canon Staar Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Physician Info</relationshipLabel>
        <relationshipName>Physician_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hoya_Rate__c</fullName>
        <label>Hoya Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Brand_Name__c</fullName>
        <label>Other Brand Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Brands_Rate__c</fullName>
        <label>Other Brands Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physician_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician Visit</label>
        <referenceTo>Physician_Visit__c</referenceTo>
        <relationshipLabel>Physician Info</relationshipLabel>
        <relationshipName>Physician_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReZoom_Rate__c</fullName>
        <label>ReZoom Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sensar_rate__c</fullName>
        <description>Sensar rate</description>
        <label>Sensar rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_Akreos_AO__c</fullName>
        <label>Stock Level: Akreos AO</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_Akreos_Adapt__c</fullName>
        <label>Stock Level: Akreos Adapt</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_Akreos_MI_60__c</fullName>
        <label>Stock Level: Akreos MI-60</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_Crystalens__c</fullName>
        <label>Stock Level: Crystalens</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_Envista__c</fullName>
        <label>Stock Level: Envista</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_LI61AO__c</fullName>
        <label>Stock Level: LI61AO</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_LI61SE__c</fullName>
        <label>Stock Level: LI61SE</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis_Multifocal_Rate__c</fullName>
        <label>Tecnis Multifocal Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis_Rate__c</fullName>
        <label>Tecnis Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Physician Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Physician Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physician Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>